# build-pypackage-cpp

./: .gitignore  pyproject.toml  setup.py  work_env.py
src/mypack/: __init__.py  _version.py
src/mypack/cpp/: hellocpp.cc
