[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="mypackage"
dependencies = [
    "requests",
    'importlib-metadata; python_version=="3.10"',
    "numpy==1.23.1"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr="mypack._version.version"}

[tool.setuptools_scm]
write_to = "src/mypack/_version.py"

[tool.black]
line-length = 80
